updated full german locale

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -117,7 +117,7 @@ capacitor-core=Kondensatorkern
 capacitor-termination=Kondensatorterminierung
 carbon-dust=Kohlenstoffstaub
 biopolymer=Biopolymer
-carbon-nanotube=Kohlenstoffnanoröhren
+carbon-nanotube=Kohlenstoffnanoröhre
 sodium-silicate=Natriumsilikat
 silica-powder=Silikatpulver
 colloidal-silica=Kieselsol
@@ -194,8 +194,9 @@ proton-donor=Protonendonor
 proton-receiver=Protonenakzeptor
 blackhole-fuel=Materie
 magic-furnace=Singularitätsenergieextraktor
-ht-locomotive=Hightech schwebende Lokomotive
-ht-generic-wagon=Hightech schwebender Güterwaggon
+ht-locomotive=Hightech-Lokomotive
+ht-generic-wagon=Hightech-Güterwaggon
+ht-generic-fluid-wagon=Hightech-Tankwaggon
 nexelit-battery=Nexelitbatterie
 used-nexelit-battery=Verbrauchte Nexelitbatterie
 
@@ -255,7 +256,7 @@ phosphorous-acid=Phosphorische Säure
 phosphoric-acid=Phosphorsäure
 phosphine-gas=Phosphingas
 propene=Propen
-ethylene=Ethen
+ethylene=Ethylen
 ree-slurry=Seltenerd-Suspension
 ree-solution=Seltenerd-Lösung
 cumene=Cumol
@@ -278,76 +279,203 @@ nitrobenzene=Nitrobenzol
 
 [entity-name]
 phosphate-rock=Uralte Überbleibsel
-rare-earth-bolide=Seltenerd-Klumpen
+rare-earth-bolide=Seltene-Erden-Meteorit
 phosphate-mine=Phosphatmine
-rare-earth-mine=Seltenerd-Extraktor
-clay-pit=Lehmgrube
-moondrop-greenhouse=Moondrop-Gewächshaus
-fbreactor=Fließbettreaktor
-auog-paddock=Auog-Koppel
-electronics-factory=Elektronikfabrik
-pulp-mill=Breimühle
-pcb-factory=PCB-Fabrick
-chipshooter=Chipshooter-Maschine
-nano-assembler=Nano-Assembler
-cadaveric-arum=Leichenarum-Gewächshaus
+rare-earth-mine=Seltenerdmine
+clay-pit-mk01=Lehmgrube MK 01
+clay-pit-mk02=Lehmgrube MK 02
+clay-pit-mk03=Lehmgrube MK 03
+clay-pit-mk04=Lehmgrube MK 04
+moondrop-greenhouse-mk01=Mondtropfen Gewächshaus MK 01
+moondrop-greenhouse-mk02=Mondtropfen Gewächshaus MK 02
+moondrop-greenhouse-mk03=Mondtropfen Gewächshaus MK 03
+moondrop-greenhouse-mk04=Mondtropfen Gewächshaus MK 04
+fbreactor-mk01=Fließbettreaktor MK 01
+fbreactor-mk02=Fließbettreaktor MK 02
+fbreactor-mk03=Fließbettreaktor MK 03
+fbreactor-mk04=Fließbettreaktor MK 04
+auog-paddock=Auog-Höhle
+electronics-factory-mk01=Elektronikfabrik MK 01
+electronics-factory-mk02=Elektronikfabrik MK 02
+electronics-factory-mk03=Elektronikfabrik MK 03
+electronics-factory-mk04=Elektronikfabrik MK 04
+pulp-mill-mk01=Zellstofffabrik MK 01
+pulp-mill-mk02=Zellstofffabrik MK 02
+pulp-mill-mk03=Zellstofffabrik MK 03
+pulp-mill-mk04=Zellstofffabrik MK 04
+pcb-factory-mk01=Leiterplattenfabrik MK 01
+pcb-factory-mk02=Leiterplattenfabrik MK 02
+pcb-factory-mk03=Leiterplattenfabrik MK 03
+pcb-factory-mk04=Leiterplattenfabrik MK 04
+chipshooter-mk01=Chipbestückungsmaschine MK 01
+chipshooter-mk02=Chipbestückungsmaschine MK 02
+chipshooter-mk03=Chipbestückungsmaschine MK 03
+chipshooter-mk04=Chipbestückungsmaschine MK 04
+nano-assembler-mk01=Molekulare Montagemaschine MK 01
+nano-assembler-mk02=Molekulare Montagemaschine MK 02
+nano-assembler-mk03=Molekulare Montagemaschine MK 03
+nano-assembler-mk04=Molekulare Montagemaschine MK 04
+cadaveric-arum-mk01=Kadaver-Aronstab-Gewächshaus MK 01
+cadaveric-arum-mk02=Kadaver-Aronstab-Gewächshaus MK 02
+cadaveric-arum-mk03=Kadaver-Aronstab-Gewächshaus MK 03
+cadaveric-arum-mk04=Kadaver-Aronstab-Gewächshaus MK 04
 kicalk-plantation=Kicalk-Plantage
 zipir=Künstliches Zipir-Riff
 py-construction-robot-mk04=Hightech-Konstruktionspyanobot
 py-logistic-robot-mk04=Hightech-Logistikpyanobot
 quantum-computer=Quantencomputer
-particle-accelerator=Teilchenbeschleuniger
+particle-accelerator-mk01=Teilchenbeschleuniger MK 01
+particle-accelerator-mk02=Teilchenbeschleuniger MK 02
+particle-accelerator-mk03=Teilchenbeschleuniger MK 03
+particle-accelerator-mk04=Teilchenbeschleuniger MK 04
 blackhole=Singularitätsenergieextraktor
 magic-furnace=Singularitätsenergieextraktor
+ht-pipes=Multifunktionsrohr
+ht-pipes-to-ground=Unterirdisches Multifunktionsrohr
+ht-locomotive=HighTech-Nexelit schwebende Lokomotive
+ht-generic-wagon=HighTech-Nexelit schwebender Güterwaggon
+ht-generic-fluid-wagon=HighTech-Nexelit schwebender Tankwaggon
+crash-site-assembling-machine-1-repaired=Abgestürzte Schiffsmontagemaschine
+py-roboport-mk03=Py Roboterhangar MK 03
 
 [entity-description]
 auog-paddock=Schüchterne Kreaturen bekannt als Auogs.
-phosphate-rock=Überbleibsel eines antiken Lebens.
+phosphate-rock=Überbleibsel eines urzeitlichen Lebewesens. Erfordert eine Phosphatmine, um den Phosphatstein abzubauen.
+phosphate-rock-02=Die riesigen erhaltenen Überbleibsel eines urzeitlichen Lebewesens. Seien Sie froh, dass diese Kreaturen längst ausgestorben sind. Erfordert eine große Phosphatmine, um den Phosphatstein abzubauen.
 rare-earth-bolide=Ein Geschenk des Himmels.
-phosphate-mine=Gebäude das Phosphat extrahieren kann.
-rare-earth-mine=Ein Gebäude das Seltene Erden aus den Brocken extrahiert.
-clay-pit=Eine Lehmgrube, mehr aber auch nicht.
-moondrop-greenhouse=Moondrops sind Alienpflanzen, die Methan produzieren.
-fbreactor=Normaler Fließbettreaktor.
-electronics-factory=Hier werden elektronische Komponenten hergestellt.
-pulp-mill=Weitere Verarbeitung von organischer Materie.
-pcb-factory=Automatisierte PCB-Fabrik.
-chipshooter=Hochgeschwindigkeitsleiterplattenbestückung.
-nano-assembler=Die Maschine für alles, das im mikroskopisch Kleinen produziert werden muss.
-cadaveric-arum=Ein Gewächshaus für Pflanzen, die Schwefelgase ausstoßen.
-kicalk-plantation=Nützliche, fluffige Bäume für feinste Qualitätsfasern.
+phosphate-mine=Ein Gebäude das Phosphat aus reichhaltigen Ressourcen extrahieren kann.
+rare-earth-mine=Ein Gebäude das Seltene Erden aus einem Meteorit extrahiert.
+clay-pit-mk01=Eine Lehmgrube, mehr aber auch nicht.
+clay-pit-mk02=Eine Lehmgrube, mehr aber auch nicht.
+clay-pit-mk03=Eine Lehmgrube, mehr aber auch nicht.
+clay-pit-mk04=Eine Lehmgrube, mehr aber auch nicht.
+moondrop-greenhouse-mk01=Ein Gewächshaus, in dem der Mondtropfen gezüchtet wird, eine Außerirdische Pflanze, welche Methan produziert.
+moondrop-greenhouse-mk02=Ein Gewächshaus, in dem der Mondtropfen gezüchtet wird, eine Außerirdische Pflanze, welche Methan produziert.
+moondrop-greenhouse-mk03=Ein Gewächshaus, in dem der Mondtropfen gezüchtet wird, eine Außerirdische Pflanze, welche Methan produziert.
+moondrop-greenhouse-mk04=Ein Gewächshaus, in dem der Mondtropfen gezüchtet wird, eine Außerirdische Pflanze, welche Methan produziert.
+fbreactor-mk01=Ein Reaktor, indem Feststoffpartikel durch Gas oder Flüssigkeiten aufgewirbelt werden und so gleichmäßig reagieren. 
+fbreactor-mk02=Ein Reaktor, indem Feststoffpartikel durch Gas oder Flüssigkeiten aufgewirbelt werden und so gleichmäßig reagieren. 
+fbreactor-mk03=Ein Reaktor, indem Feststoffpartikel durch Gas oder Flüssigkeiten aufgewirbelt werden und so gleichmäßig reagieren. 
+fbreactor-mk04=Ein Reaktor, indem Feststoffpartikel durch Gas oder Flüssigkeiten aufgewirbelt werden und so gleichmäßig reagieren. 
+electronics-factory-mk01=Hier werden elektronische Komponenten hergestellt.
+electronics-factory-mk02=Hier werden elektronische Komponenten hergestellt.
+electronics-factory-mk03=Hier werden elektronische Komponenten hergestellt.
+electronics-factory-mk04=Hier werden elektronische Komponenten hergestellt.
+pulp-mill-mk01=Weitere Verarbeitung organischer Materie.
+pulp-mill-mk02=Weitere Verarbeitung organischer Materie.
+pulp-mill-mk03=Weitere Verarbeitung organischer Materie.
+pulp-mill-mk04=Weitere Verarbeitung organischer Materie.
+pcb-factory-mk01=Automatisierte Leiterplattenfabrik.
+pcb-factory-mk02=Automatisierte Leiterplattenfabrik.
+pcb-factory-mk03=Automatisierte Leiterplattenfabrik.
+pcb-factory-mk04=Automatisierte Leiterplattenfabrik.
+chipshooter-mk01=Hochgeschwindigkeitsleiterplattenbestückung.
+chipshooter-mk02=Hochgeschwindigkeitsleiterplattenbestückung.
+chipshooter-mk03=Hochgeschwindigkeitsleiterplattenbestückung.
+chipshooter-mk04=Hochgeschwindigkeitsleiterplattenbestückung.
+nano-assembler-mk01=Die Maschine für alles, das im mikroskopisch Kleinen produziert werden muss.
+nano-assembler-mk02=Die Maschine für alles, das im mikroskopisch Kleinen produziert werden muss.
+nano-assembler-mk03=Die Maschine für alles, das im mikroskopisch Kleinen produziert werden muss.
+nano-assembler-mk04=Die Maschine für alles, das im mikroskopisch Kleinen produziert werden muss.
+cadaveric-arum-mk01=Ein Gewächshaus, in dem der Kadaver-Aronstab gezüchtet wird, eine übelriechende Pflanze, welche schwefelhaftige Gase produziert.
+cadaveric-arum-mk02=Ein Gewächshaus, in dem der Kadaver-Aronstab gezüchtet wird, eine übelriechende Pflanze, welche schwefelhaftige Gase produziert.
+cadaveric-arum-mk03=Ein Gewächshaus, in dem der Kadaver-Aronstab gezüchtet wird, eine übelriechende Pflanze, welche schwefelhaftige Gase produziert.
+cadaveric-arum-mk04=Ein Gewächshaus, in dem der Kadaver-Aronstab gezüchtet wird, eine übelriechende Pflanze, welche schwefelhaftige Gase produziert.
+kicalk-plantation=Eine Plantage zur Zucht äußerst nützlicher, flauschiger Bäume, die hochwertige Fasern produzieren.
 py-logistic-robot-mk04=Der einzig wahre Logistikroboter.
 py-construction-robot-mk04=Der einzig wahre Bauroboter.
-zipir=Hier werden Zipirs gezüchtet.
+zipir=Ein Künstliches Riff, um die friedlichen Zipirs an Land zu züchten.
 quantum-computer=Die Matrix für alle Raketenwissenschaftler.
-particle-accelerator=Der Teilchenbeschleuniger für Jedermann.
-blackhole=Ein kleines rotierendes schwarzes Loch, das jegliche Materie in reine Energie umwandelt.
+particle-accelerator-mk01=Der Teilchenbeschleuniger für Jedermann.
+particle-accelerator-mk02=Der Teilchenbeschleuniger für Jedermann.
+particle-accelerator-mk03=Der Teilchenbeschleuniger für Jedermann.
+particle-accelerator-mk04=Der Teilchenbeschleuniger für Jedermann.
+blackhole=Ein kleines rotierendes schwarzes Loch, das jegliche Materie in reine Energie umwandelt. Füttere es stetig mit jeglicher Materie.
+ht-locomotive=HighTech-Nexelit schwebende Lokomotive
+ht-generic-wagon=HighTech-Nexelit schwebender Güterwaggon
+ht-generic-fluid-wagon=HighTech-Nexelit schwebender Tankwaggon
 
 [technology-name]
-basic-electronics=Grundlegende Elektronik
-advanced-circuit=Fortschrittliche Elektronik
-semiconductor-doping=Halbleiterdoping
+electronics=Elektronik – Stufe 1
+basic-electronics=Elektronik – Stufe 2
+advanced-circuit=Elektronik – Stufe 3
+quantum-processor=Elektronik – Stufe 4
+integrated-circuits-1=Kleine integrierte Schaltkreise
+integrated-circuits-2=Mittelgroße integrierte Schaltkreise
+integrated-circuits-3=Große integrierte Schaltkreise
+semiconductor-doping=Halbleiterdotierung – Stufe 1
 rare-earth-tech=Seltene-Erden-Technologie
 graphene=Graphen-Technologie
-quantum-processor=Nanotechnologie
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw-Theorem
 space-science-pack=Quanten-Computing
 penrose=Penrose-Prozess
-nucleo=Nukleosynthese
+nucleo=Nukleosynthese – Stufe 1
+ht-trains=Hightech Züge MK01
+auog=Auog
+kicalk=Kicalk
+moondrop=Mondtropfen
+biofilm=Biofilm
+biopolymer=Biopolymer
+biotech=Biotechnologie
+cadaveric-arum=Kadaver-Aronstab
+carbon-nanotube=Kohlenstoffnanoröhren
+collagen=Kollagen
+colloidal-silica=Kieselsol
+electronics-machines=Fortschrittliche Elektronikmaschinen
+epoxy=Epoxidharz
+fertilizer=Dünger
+fiberboard=Faserplatte – Stufe 1
+fiberglass=Glasfasergewebe
+ht-robotics=Hightech-Robotik
+magnetic-core=Magnetkern
+melamine=Melamin
+microfibers=Submikrofasern
+nems=Nanoelektromechanische Systeme
+nitrobenzene=Nitrobenzol
+nylon=Nylon
+paramagnetic-material=Paramagnetisches Material
+parametric-oscilator=Optisch parametrischer Oszillator
+phenol=Phenol
+phosphorous-processing=Phosphorverarbeitung
+propene=Propen
+rayon=Viskosefaser
+re-magnet=Neodym-Magnet
+supercapacitor=Superkondensator
+superconductor=Supraleiter
+zipir=Zipir
+zno-nanoparticles=Zinkoxid-Nanopartikel
+
+fiberboard-mk02=Faserplatte – Stufe 2
+integrated-circuits=Integrierte Schaltkreise
+nucleo-mk02=Nukleosynthese – Stufe 2
+nucleo-mk03=Nukleosynthese – Stufe 3
+plastics-mk02=Kunststoffe – Stufe 2
+plastics-mk03=Kunststoffe – Stufe 3
+semiconductor-doping-mk02=Halbleiterdotierung – Stufe 2
+ethylene=Ethylen
+plastics-mk04=Kunststoffe – Stufe 4
+
+ceramic=Keramik
 
 [technology-description]
-basic-electronics=Schaltet grundlegende Komponenten und Prozesse frei.
-advanced-circuit=Schaltet fortschrittliche Komponenten und Prozesse frei.
-semiconductor-doping=Ermöglkicht das Doping von Halbleitern.
-rare-earth-tech=Ermöglicht die Verarbeitung von Seltenen Erden.
+electronics=Schalte sehr einfache auf Vakuumröhren basierende Schaltkreise frei.
+basic-electronics=Schalte grundlegende auf Transistoren basierende Prozesse und Komponenten frei.
+advanced-circuit=Schalte fortgeschrittene auf Transistoren basierende Prozesse und Komponenten frei.
+advanced-electronics-2=Schalte sehr fortgeschrittene auf Transistoren basierende Prozesse und Komponenten frei.
+intergrated-circuits-1=Frühe Silizium-basierte Schaltkreise mit nur wenigen Transistoren pro Chip.
+intergrated-circuits-2=Fortgeschrittenere Schaltkreise mit Tausenden von miniaturisierten Transistoren.
+intergrated-circuits-3=Hochfortgeschrittene Schaltkreise mit Millionen von Transistoren im nahezu atomaren Maßstab.
+semiconductor-doping=Schalte die Dotierungstechnologie durch Gasphasenabscheidung frei.
+rare-earth-tech=Erhalte Zugang zu den Seltenerdelemente.
 graphene=Ermöglicht die Herstellung vom Supermaterial Graphen.
 quantum-processor=Ermöglicht die Herstellung von Nanotechnologie.
 aerogel=Ermöglicht die Herstellung von Aerogel.
-earnshaw-theorem=Komplizierter physikalischer Effekt der Elektrodynamik.
+earnshaw-theorem=Klassische magnetische Kräfte nach dem inversen Quadratgesetz durch Gravitationsfelder
 space-science-pack=Ermöglicht den Bau von Quantencomputern. GOING QUANTUM!
 nucleo=Ab hier wird es gefährlich! Achtung vor schwarzen Löchern!
 penrose=Die ultimative Energieerzeugung! MEHR ENERGIE!
+ht-trains=Schaltet die wesentlich effizienteren Nexelit-angetriebenen Züge frei.
 
 [tile-name]
 
@@ -356,5 +484,11 @@ phosphate-rock=Phosphatstein
 rare-earth-ore=Seltenerd-Erz
 
 [autoplace-control-names]
-phosphate-rock=Phosphatstein
-rare-earth-bolide=Seltenerd-Brocken
+phosphate-rock=[img=entity.phosphate-rock] Phosphatstein
+rare-earth-bolide=[img=entity.rare-earth-bolide] Seltenerd-Meteorit
+
+[fuel-category-name]
+nexelit=Nexelit-verbesserter-Brennstoff
+blackhole=Materie-Zertrümmerer
+
+[gui-game-finished]
