tweaked roboport name (de)

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -336,7 +336,7 @@ ht-locomotive=HighTech-Nexelit schwebende Lokomotive
 ht-generic-wagon=HighTech-Nexelit schwebender Güterwaggon
 ht-generic-fluid-wagon=HighTech-Nexelit schwebender Tankwaggon
 crash-site-assembling-machine-1-repaired=Abgestürzte Schiffsmontagemaschine
-py-roboport-mk03=Py Roboterhangar MK 03
+py-roboport-mk03=Pyanoroboterhangar MK 03
 
 [entity-description]
 auog-paddock=Schüchterne Kreaturen bekannt als Auogs.
