Renamed "distilation of cumene" to "cumene distillation"

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -9,7 +9,7 @@ p-dope=Light p-type silicon doping
 heavy-p-type=Heavy p-type silicon doping
 crusher-ree=Crush rare-earth ores
 milling-ree=Milling rare-earth powder
-cumene-distilation=Distilation of cumene
+cumene-distilation=Cumene distillation
 rendering=Zipir rendering
 antimatter-fusion=Slow reacting antimatter
 steam-exchange5=Steam exchange
