RU locale update for PyHT 3.0.18

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -9,7 +9,7 @@ p-dope=Слабое легирование кремния p-типа
 heavy-p-type=Сильное легирование кремния p-типа
 crusher-ree=Дробление руды редкоземельных элементов
 milling-ree=Измельчение песка редкоземельных элементов
-cumene-distilation=Перегонка кумола
+cumene-distilation=Дистилляция кумола
 rendering=Разделать зипира
 antimatter-fusion=Медленная аннигиляция
 steam-exchange5=Конвертация пара
