RU locale update for PyHT 3.0.18 (#126)
* RU locale update for PyHT 3.0.18

* update changelog

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -5,7 +5,7 @@ tall-oil-separation=Отделение таллового масла
 phosphoric-acid=Перегонка фосфорной кислоты
 crusher-ree=Дробление руды редкоземельных элементов
 milling-ree=Измельчение песка редкоземельных элементов
-cumene-distilation=Перегонка кумола
+cumene-distilation=Дистилляция кумола
 rendering=Разделать зипира
 antimatter-fusion=Медленная аннигиляция
 steam-exchange5=Конвертация пара
